architect-go/k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: architect-production
  labels:
    name: architect-production
    environment: production
